<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBackground"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.pharogrammer.fedora.damanhour.homiversity.mvp.view.activity.MainActivity"
    >

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar_main"
        android:background="@color/colorPrimary"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toolbar_main"
    >

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >


    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ceutical"
        android:id="@+id/btn_main_ceutical"
        android:background="@color/colorBtnCeutical"
        android:clickable="true"
        style="@style/ButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_ceutical"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_ceutical_theoritcal"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theo_practical"
            android:id="@+id/btn_ceutical_theo_practical"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_ceutical_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_ceutical_record"
            style="@style/ImageButtonStyle"
            />


    </LinearLayout>

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/bio"
        android:id="@+id/btn_main_bio"
        android:background="@color/colorBtnBio"
        style="@style/ButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_bio"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_bio_theoritcal"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theo_practical"
            android:id="@+id/btn_bio_theo_practical"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_bio_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_bio_record"
            style="@style/ImageButtonStyle"
            />

    </LinearLayout>

    //Instrumental Analysis Layout

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/instro"
        android:id="@+id/btn_main_instro"
        android:background="@color/colorBtnInstro"
        style="@style/ButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_instro"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_instro_theoritcal"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theo_practical"
            android:id="@+id/btn_instro_theo_practical"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_instro_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_instro_record"
            style="@style/ImageButtonStyle"
            />

    </LinearLayout>

    //Pharmacology Layout
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/pharma"
        android:id="@+id/btn_main_pharma"
        android:background="@color/colorBtnPharma"
        style="@style/ButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_pharma"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_pharma_theoritcal"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theo_practical"
            android:id="@+id/btn_pharma_theo_practical"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_pharma_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_pharma_record"
            style="@style/ImageButtonStyle"
            />

    </LinearLayout>

    //Kinetics Layout

    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kinetics"
        android:id="@+id/btn_main_kinetics"
        android:background="@color/colorBtnKinetics"
        style="@style/ButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_kinetics"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_kinetics_theoritcal"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theo_practical"
            android:id="@+id/btn_kinetics_theo_practical"
            style="@style/ImageButtonStyle"
            />

        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_kinetics_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_kinetics_record"
            style="@style/ImageButtonStyle"
            />

    </LinearLayout>

    //Immunology Layout
    <android.support.v7.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/immu"
        android:id="@+id/btn_main_immu"
        android:background="@color/colorBtnImmu"
        style="@style/ButtonStyle"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_immu"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_immu_theoritcal"
            style="@style/ImageButtonStyle"
            />


        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_immu_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_immu_record"
            style="@style/ImageButtonStyle"
            />

    </LinearLayout>

    //Pharmacy Practice

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btn_main_practice"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorBtnPractice"
            android:text="@string/practice" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layout_sub_practice"
        android:gravity="center"
        android:visibility="gone"
        >
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/theoritical"
            android:id="@+id/btn_practice_theoritcal"
            style="@style/ImageButtonStyle"
            />


        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/material"
            android:id="@+id/btn_practice_material"
            style="@style/ImageButtonStyle"
            />
        <android.support.v7.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/record"
            android:id="@+id/btn_practice_record"
            style="@style/ImageButtonStyle"
            />
    </LinearLayout>

</LinearLayout>
</ScrollView>
</RelativeLayout>